# CastingEssentialsNext

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Directory.Build.props  LICENSE.md  README.md  genversion.ps1
.github/workflows/: build_windows.yml  release.yml
CastingEssentials/: CastingEssentials.vcxproj  CastingEssentials.vcxproj.filters  GitVersion.cpp.in  version.rc.in
CastingEssentials/Controls/: ImageProgressBar.cpp  ImageProgressBar.h  StubPanel.cpp  StubPanel.h  VariableLabel.cpp  VariableLabel.h
CastingEssentials/Hooking/: BaseGroupHook.h  GroupClassHook.h  GroupGlobalHook.h  GroupGlobalVirtualHook.h  GroupManualClassHook.h  GroupVirtualHook.h  HookShim.h  IBaseHook.cpp  IBaseHook.h  IGroupHook.h  ModuleSegments.cpp  ModuleSegments.h  TemplateFunctions.h  TemplateTypedefs.h
CastingEssentials/Misc/: CRefPtrFix.h  CmdAlias.h  CommandCallbacks.h  DebugOverlay.cpp  DebugOverlay.h  HLTVCameraHack.h  MissingDefinitions.cpp  MissingDefinitions.h  OffsetChecking.cpp  Padding.h  SuggestionList.h
CastingEssentials/Misc/Extras/: VPlane.h
CastingEssentials/Misc/NatVis/: CUtlVector.natvis  ClientClass.natvis  RecvProp.natvis  RecvTable.natvis
CastingEssentials/Modules/: Antifreeze.cpp  Antifreeze.h  AutoCameras.cpp  AutoCameras.h  CameraAutoSwitch.cpp  CameraAutoSwitch.h  CameraSmooths.cpp  CameraSmooths.h  CameraState.cpp  CameraState.h  CameraTools.cpp  CameraTools.h  ClientTools.cpp  ClientTools.h  ConsoleTools.cpp  ConsoleTools.h  FOVOverride.cpp  FOVOverride.h  FreezeInfo.cpp  FreezeInfo.h  Graphics.cpp  Graphics.h  HUDHacking.cpp  HUDHacking.h  HitEvents.cpp  HitEvents.h  IngameTeamScores.cpp  IngameTeamScores.h  ItemSchema.cpp  ItemSchema.h  Killfeed.cpp  Killfeed.h  Killstreaks.cpp  Killstreaks.h  LoadoutIcons.cpp  LoadoutIcons.h  LocalPlayer.cpp  LocalPlayer.h  MapConfigs.cpp  MapConfigs.h  (+20 more)
CastingEssentials/PluginBase/: CastingPlugin.cpp  Common.cpp  Common.h  Entities.cpp  Entities.h  EntityOffset.h  EntityOffsetIterator.h  Exceptions.cpp  Exceptions.h  Hook.h  HookDefinitions.h  HookManager.cpp  HookManager.h  ICameraOverride.h  Interfaces.cpp  Interfaces.h  Modules.cpp  Modules.h  Player.cpp  Player.h  PlayerStateBase.cpp  PlayerStateBase.h  Plugin.h  TFDefinitions.h  TFPlayerResource.cpp  TFPlayerResource.h  TFTeamResource.cpp  TFTeamResource.h  VariablePusher.h
CastingEssentials/Properties/: Shared.props
Libraries/: tier2.lib  tier3.lib
plugin_folder/materials/castingessentials/statuseffects/: bonked_red.vmt  burning_blue.vmt  burning_red.vmt  jarated_red.vmt  milked_red.vmt
